2009-10-20  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h (__assuan_usleep): Add declaration.
	* system.c (__assuan_usleep): Make non-static.
	* libassuan.vers, libassuan.defs: Sort lexicographically.

2009-10-19  Marcus Brinkmann  <marcus@g10code.com>

	* system.c (__assuan_waitpid): Return something.
	(_assuan_usleep): Don't return value in void function.

2009-10-16  Marcus Brinkmann  <marcus@g10code.com>

	* conversion.c: Do not include <sys/types.h> and <time.h>.
	* debug.h (TRACE_BEG6, TRACE4): New macros.
	(TRACE_SYSERR): Pass _assuan_trace_context to _assuan_debug.
	* context.c (assuan_set_pointer, assuan_get_pointer,
	assuan_set_flag, assuan_get_flag, assuan_set_io_monitor,
	assuan_set_error): Add trace messages.

	* libassuan-config.in, libassuan.m4, Makefile.am: Remove PTH support.
	* assuan.h (assuan_msghdr_t): New type.
	(ASSUAN_INVALID_PID): New macro.
	(ASSUAN_NO_FIXSIGNALS): New flag macro.
	(ASSUAN_SYSTEM_HOOKS_VERSION): New macro.
	(struct assuan_system_hooks, assuan_system_hooks_t): New types.
	(assuan_pipe_connect, assuan_pipe_connect_ext): Don't make ARGV
	const for name==NULL operation.  Make fd_child_list an array of
	assuan_fd_t.
	(assuan_sock_init, assuan_sock_deinit, assuan_set_system_hooks,
	assuan_ctx_set_system_hooks, __assuan_pipe, __assuan_close,
	__assuan_spawn, __assuan_socketpair): New function prototypes.
	(_ASSUAN_SYSTEM_PTH_IMPL, ASSUAN_SYSTEM_PTH_DECL,
	ASSUAN_SYSTEM_PTH): New macros.
	(_assuan_system_pth): New declaration.
	* libassuan.vers, libassuan.defs: Add assuan_sock_init,
	assuan_sock_deinit, __assuan_pipe, __assuan_close, __assuan_spawn,
	__assuan_socketpair, assuan_set_system_hooks,
	assuan_ctx_set_system_hooks.

	* assuan-defs.h (struct assuan_io): Removed, move members to ...
	(struct assuan_context_s): ... this to ENGINE.  New flag
	no_fixsignals.  New member SYSTEM.  Remove member IO.
	(_assuan_pipe, _assuan_read, _assuan_write, _assuan_recvmsg,
	_assuan_sendmsg, _assuan_spawn, _assuan_socketpair,